Fix: 계획 추가에서 시간 선택할 때 스크롤이 안돼서 overflow-y값 수정

--- a/front/public/css/style.css
+++ b/front/public/css/style.css
@@ -167,3 +167,7 @@ body {
         display: none !important;
     }
 }
+
+.ant-picker-time-panel-column {
+    overflow-y: auto;
+}
